sw/source/core/text/porrst.cxx
@@ -948,7 +948,6 @@ bool SwControlCharPortion::Format( SwTextFormatInfo &rInf )
     Width( 0 );
     Height( pRoot->Height() );
     SetAscent( pRoot->GetAscent() );
-
     return false;
 }
 
